# mrrp

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  notes.txt
.cargo/: config.toml
docs/: rtl2832u.md
mrrp/: Cargo.toml
mrrp-cli/: Cargo.toml
mrrp-cli/src/: app.rs  args.rs  demodulator.rs  fft.rs  files.rs  main.rs  proxy.rs  reader.rs  util.rs  waterfall.rs
mrrp-cli/src/ui/: bandplan.rs  bookmarks.rs  frequencies.rs  frequency_dial.rs  frequency_marks.rs  keybinds.rs  mod.rs  waterfall.rs
mrrp-rtl-sdr/: Cargo.toml
mrrp-rtl-sdr-test/: Cargo.toml
mrrp-rtl-sdr-test/src/: demod_regs.rs  main.rs
mrrp-rtl-sdr/src/: device.rs  enumerate.rs  i2c.rs  lib.rs
mrrp-rtl-sdr/src/rtl2832u/: filter.rs  gpio.rs  i2c.rs  mod.rs  register.rs
mrrp-rtl-sdr/src/rtl283u/: mod.rs  register.rs
mrrp-rtl-sdr/src/tuner/: mod.rs  r82xx.rs
mrrp-sat/: Cargo.toml
mrrp-sat/src/: config.rs  geo.rs  main.rs  satellite.rs  satnogs.rs  track.rs  update.rs
mrrp-sdr/: Cargo.toml  build.rs  config.example.toml
mrrp-sdr/src/: app.rs  build_info.rs  cli.rs  config.rs  directories.rs  main.rs
mrrp-sdr/src/hal/: radio.rs
mrrp-sdr/src/sdr/: mod.rs  sink.rs  source.rs
mrrp-sdr/src/ui/: about_window.rs  app.rs  constellation.rs  debug_window.rs  menu.rs  mock.rs  mod.rs  placeholder.rs  radio.rs  spectrum.rs  spectrum.wgsl  state.rs  waterfall.rs  waterfall.wgsl
mrrp-sdr/src/ui/dock/: bookmarks.rs  channels.rs  demodulation.rs  mod.rs  radio.rs  spectrum.rs  spectrum_waterfall.rs  waterfall.rs
mrrp-sdr/src/ui/widgets/: constellation.rs  frequency_dial.rs  mod.rs  spectrum.rs  spectrum_cpu.rs  spectrum_gpu.rs  waterfall.rs  waterfall.wgsl
mrrp-sdr/src/util/: github_urls.rs  mod.rs
mrrp-widgets/: Cargo.toml
mrrp-widgets/src/: colormap.rs  frequency_dial.rs  lib.rs  spectrum.rs  spectrum.wgsl  util.rs  waterfall.rs  waterfall.wgsl
mrrp-widgets/src/util/: mod.rs  ring_buffer.rs  staging.rs
mrrp-xtask/: Cargo.toml
mrrp-xtask/src/: main.rs
mrrp/benches/: buffering.rs
mrrp/examples/: am_receiver.rs  dtmf.rs  filter_test.rs  fm_modulate.rs  fm_receiver.rs  sstv.rs
mrrp/src/: audio.rs  chunk.rs  io.rs  lib.rs
mrrp/src/block/: mod.rs  sine.rs
mrrp/src/buf/: mod.rs  samples.rs  samples_mut.rs  uninit_slice.rs
mrrp/src/demod/: adsb.rs  mod.rs
mrrp/src/filter/: biquad.rs  fir.rs  mod.rs  resampling.rs
mrrp/src/filter/design/: argmin.rs  equiripple_fft.rs  mod.rs  pm_remez.rs
mrrp/src/filter/design/pm_remez/: implementation.rs  mod.rs
mrrp/src/filter/fir/: equiripple_fft.rs  mod.rs
mrrp/src/io/: mod.rs  read.rs  test.rs  write.rs
mrrp/src/io/combinators/: buffered.rs  chained.rs  converted.rs  inspect.rs  limited.rs  map.rs  map_err.rs  mod.rs  repeated.rs  scan.rs  throttled.rs  with_samplerate.rs  with_span.rs  zip_with.rs
mrrp/src/modem/: adsb.rs  dtmf.rs  mod.rs
mrrp/src/modem/fm/: mod.rs
mrrp/src/modem/sstv/: decoder.rs  encoder.rs  image.rs  mod.rs  modes.rs  state.rs
mrrp/src/sample/: conversion.rs  mod.rs  types.rs
mrrp/src/sink/: file.rs  mod.rs  raw.rs  rtl_tcp.rs
mrrp/src/source/: file.rs  mod.rs  noise.rs  rtlsdr.rs  rtlsdr_new.rs  sine.rs
mrrp/src/util/: array_vecdeque.rs  dim.rs  mod.rs
mrrp/tests/: bench_fir_single_sample_buffered_bug.rs
