[workspace]
resolver = "3"
members = ["mrrp", "mrrp-cli", "mrrp-sdr", "mrrp-widgets"]

#[profile.dev]
#opt-level = 3
#overflow-checks = false

#[profile.release]
#debug = "full"
#strip = "none"

[profile.dev.package."*"]
opt-level = 3
debug-assertions = false
overflow-checks = false

# Without debug-assertions egui compiles out some methods we want to use (debug overlay)
[profile.dev.package."egui"]
opt-level = 3
debug-assertions = true
overflow-checks = false

[workspace.dependencies]
mrrp-widgets = { version = "0.1.0", path = "mrrp-widgets" }

# todo: remote and use rtl-sdr-rs instead
rtlsdr-async = { version = "0.1.0", git = "https://github.com/jgraef/rtlsdr-async.git", branch = "num-complex-0.5.0" }
#path = "../rtlsdr-async/rtlsdr-async"

[patch.crates-io]
# bumps rand dependency to 0.10. https://github.com/rust-num/num-complex/pull/156
num-complex = { git = "https://github.com/cuviper/num-complex.git", branch = "rand-0.10" }
# bumps num-complex and rand dependencies
rustfft = { git = "https://github.com/jgraef/RustFFT.git", branch = "num-complex-0.5.0" }
