[workspace]
resolver = "3"
members = ["mrrp", "mrrp-cli", "mrrp-sat", "mrrp-sdr", "mrrp-widgets"]

# Include debug info in release, so we can investigate bugs better
[profile.release]
debug = "full"
strip = "none"

# Dependencies can be optimized even for dev builds. we don't mind if they take long to compile (once).
# This usually gives a lot of performance gain over very little extra compilation time.
[profile.dev.package."*"]
opt-level = 3
debug-assertions = false
overflow-checks = false

# Without debug-assertions egui compiles out some methods we want to use (debug overlay)
[profile.dev.package."egui"]
opt-level = 3
debug-assertions = true
overflow-checks = false

# mrrp might benefit from optimizations, but for now we still want checks
[profile.dev.package.mrrp]
opt-level = 3
debug-assertions = true
overflow-checks = true


[workspace.dependencies]
mrrp = { path = "mrrp", default-features = false }
mrrp-widgets = { path = "mrrp-widgets", default-features = false }

# todo: remote and use rtl-sdr-rs instead
rtlsdr-async = { version = "0.1.0", git = "https://github.com/jgraef/rtlsdr-async.git" }
