[package]
name = "mrrp-rtl-sdr"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bitfield = "0.19.4"
derive_more = { version = "2.1.1", features = ["debug"] }
embedded-hal-async = { version = "1.0.0", optional = true }
futures-util = "0.3.32"
nusb = { version = "0.2.3", features = ["tokio"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", default-features = false, features = ["rt"] }
tracing = "0.1.44"

[features]
embedded-hal = ["dep:embedded-hal-async"]
