[package]
name = "mrrp-sat"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
derive_more = { version = "2.1.1", features = ["display"] }
directories = "6.0.0"
dotenvy = "0.15.7"
humantime = "2.3.0"
numeris = { version = "0.5.11", features = ["serde"] }
reqwest = { version = "0.13.3", features = ["json"] }
satkit = { version = "0.16.2", features = ["chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.20.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
url = { version = "2.5.8", features = ["serde"] }
