[package]
name = "mrrp-sdr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
dotenvy = "0.15.7"
eframe = "0.34.2"
egui = "0.34.2"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
wgpu = { version = "29.0.3", features = ["serde"] }
