[package]
name = "mrrp-sdr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bytemuck = "1.25.0"
clap = { version = "4.6.1", features = ["derive"] }
const_format = "0.2.36"
derive_more = { version = "2.1.1", features = ["debug"] }
directories = "6.0.0"
dotenvy = "0.15.7"
eframe = { version = "0.34.2", features = ["persistence"] }
egui = "0.34.2"
egui-phosphor = "0.12.0"
egui_extras = { version = "0.34.2", features = ["all_loaders"] }
indexmap = { version = "2.14.0", features = ["serde"] }
palette = { version = "0.7.6", features = ["bytemuck", "named", "serde"] }
parking_lot = "0.12.5"
rtl-sdr-rs = { version = "0.3.1", features = ["rtl_sdr_blog"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
wgpu = { version = "29.0.3", features = ["serde"] }
