[package]
name = "mrrp-sdr"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/jgraef/mrrp-sdr/"

[dependencies]
anyhow = "1.0.102"
bytemuck = "1.25.0"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
const_format = "0.2.36"
derive_more = { version = "2.1.1", features = ["debug"] }
directories = "6.0.0"
dotenvy = "0.15.7"
eframe = { version = "0.34.2", features = ["persistence"] }
egui = "0.34.2"
egui-phosphor = "0.12.0"
egui_dock = { version = "0.19.1", features = ["serde"] }
egui_extras = { version = "0.34.2", features = ["all_loaders"] }
indexmap = { version = "2.14.0", features = ["serde"] }
palette = { version = "0.7.6", features = ["bytemuck", "named", "serde"] }
parking_lot = "0.12.5"
rtl-sdr-rs = { version = "0.3.1", features = ["rtl_sdr_blog"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
wgpu = { version = "29.0.3", features = ["serde"] }

[build-dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
dotenvy = "0.15.7"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
