[package]
name = "mrrp-widgets"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.25.0"
colorgrad = { version = "0.8.0", optional = true, default-features = false }
egui = { version = "0.34.2", default-features = false }
egui-wgpu = { version = "0.34.2", default-features = false }
nalgebra = { version = "0.35.0", default-features = false, features = [
    "bytemuck",
    "std",
] }
parking_lot = "0.12.5"
serde = { version = "1.0.228", features = ["derive"], optional = true }
tracing = "0.1.44"
wgpu = { version = "29.0.3", default-features = false }

[features]
colorgrad = ["dep:colorgrad"]
serde = ["dep:serde"]
